Closed
Bug 179956
Opened 23 years ago
Closed 13 years ago
Parser and editor should agree on blockness of captions
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: bernd_mozilla, Assigned: Ms2ger)
Details
Attachments
(1 file)
950 bytes,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
when I start the composer in a debug build,
insert a table and then create a caption I see a bunch of assertions like:
###!!! ASSERTION: Parser and editor disagree on blockness: caption: '*aIsBlock',
file c:/moz_sour/mozilla/mozilla/editor/libeditor/html/nsHTMLEditor.cpp, line 5
75
It would be cool, if you could fix this because this popups make it quite
difficult to investigate bug 105467
![]() |
||
Comment 1•23 years ago
|
||
I'm either going to fix this or turn off the warning.
Status: NEW → ASSIGNED
Target Milestone: --- → M1
Updated•19 years ago
|
QA Contact: sujay → editor
Updated•19 years ago
|
Assignee: mozeditor → nobody
Status: ASSIGNED → NEW
Assignee | ||
Comment 2•13 years ago
|
||
Given that Joe hasn't fixed it in the last decade...
Updated•13 years ago
|
Attachment #649203 -
Flags: review?(ehsan) → review+
Assignee | ||
Comment 3•13 years ago
|
||
Didn't make M1, I'm afraid.
https://hg.mozilla.org/mozilla-central/rev/b0b9d41f016a
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
OS: Windows 98 → All
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: M1 → mozilla17
You need to log in
before you can comment on or make changes to this bug.
Description
•