Bug 179956 - Remove unsound assertion; r=ehsan